Added the Match Service functionality